fix focus style of expand/collapse btns

--- a/themes/cypress/source/css/_partial/sidebar.scss
+++ b/themes/cypress/source/css/_partial/sidebar.scss
@@ -29,8 +29,12 @@
     text-decoration: none;
     font-weight: 500;
 
-    &:hover, &:focus, &:focus:hover {
+    &:hover, &:focus:hover {
       color: $color-link-hover;
+    }
+
+    &:focus, &:active {
+      color: #999;
     }
   }
 }
